test/libsolidity/syntaxTests/storageLayoutSpecifier/boolean.sol
contract C layout at true {}
// ----
// UnimplementedFeatureError 1834: (0-28): Code generation is not supported for contracts with specified storage layout base.
